--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
     "nodemon": "^1.11.0",
+    "promise-polyfill": "^6.0.2",
     "shelljs": "^0.7.8",
     "style-loader": "^0.10.2",
     "uglify": "^0.1.5",
